# textmood-lite

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  ion to 0.1.1"  pyproject.toml
.github/workflows/: ci.yml
src/textmood_lite/: __init__.py  api.py  cli.py  core.py
tests/: test_api.py  test_cli.py  test_core.py
