[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textmood-lite"
version = "0.1.0"
description = "A tiny keyword-based mood detector for text"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
textmood = "textmood_lite.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/textmood_lite"]