[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textmood-lite"
version = "0.1.0"
description = "A tiny keyword-based mood detector for text"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
textmood = "textmood_lite.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/textmood_lite"]

[project.optional-dependencies]
dev=["black","ruff","mypy","pytest","pre-commit"]
docs = ["mkdocs","mkdocs-material","mkdocstrings[python]"]

[project.dependencies]
dependencies = ["typer[all]>=0.9.0"]

[tool.black] 
line-length = 88
target-version = ["py39"]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select=["E","F","I","UP"]

[tool.mypy]
python_version="3.10"
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

